# MachineLearningHEP

./: .gitignore  .pylintrc  .travis.yml  MANIFEST.in  README.md  README_back.md  README_backup.md  analysisD0_Training.py  pyproject.toml  requirements.txt  run.sh  run_d0.sh  run_lc.sh  setup.py  util.py
MLproductions/: .gitignore
Notebooks/: AnalysisLc.ipynb  CheckJetTree.ipynb  ExampleDataFrame.ipynb  Feeddown.ipynb  IntrotoPython.ipynb  README.md  Response.ipynb  ValidateTree.ipynb  ValidateTreeD0.ipynb
ProductionsInfo/: README.md
buildrootsample/: clean.sh  skimTreeLambdac.C
buildsample/: buildMLTree.C  buildMLTree.sh  clean.sh  preparesample.py  testsampleSignalN100000BkgN100000PreMassCut.pkl  testsampleSignalN1000BkgN1000PreMassCutDs.pkl  testsampleSignalN50000BkgN50000PreMassCut.pkl  testsampleSignalN5000BkgN5000PreMassCut.pkl  trainsampleSignalN10000BkgN10000PreMassCutDs.pkl  trainsampleSignalN50000BkgN50000PreMassCut.pkl  trainsampleSignalN5000BkgN5000PreMassCut.pkl  treeBkgN100000PreMassCut.root  treeBkgN10000PreMassCut.root  treeBkgN1000PreMassCut.root  treeBkgN50000PreMassCut.root  treeBkgN5000PreMassCut.root  treeSignalN1000.root  treeSignalN10000.root  treeSignalN100000.root  treeSignalN5000.root  treeSignalN50000.root  treeTotalSignalN10000BkgN10000PreMassCut.root  treeTotalSignalN1000BkgN1000PreMassCut.root  treeTotalSignalN50000BkgN50000PreMassCut.root  treeTotalSignalN5000BkgN5000PreMassCut.root
buildsampleCandBased/: convertTreeROOT6Loop.C  treeBkgN10000PreMassCut.root  treeBkgN1000PreMassCut.root
buildsampleEventBased/: clean.sh  makeNtupleCand.sh  makeNtupleCandBased.C
buildsample_newstructure/: buildMLTree.C  makeNtupleCand.sh  makeNtupleCandBased.C  test.C  tree_Ds.C  tree_Ds.h
(+1524 files in other folders)
